Fixed #1064 -- Add dark mode (#1213)
* Add dark mode

* Review variables and add button to switch theme

* Review icons and style with django admin dark mode

* Update toggle button on mobile

* Update style code blocks and fix img release version colors

* update class style for release image

* Remove color by default on code blocks

* update style

* fix theme with cookie instead of localstorage

* fix style documentation install

* fix typo in colors

* fix loading and switch theme

--- a/djangoproject/scss/_dashboard.scss
+++ b/djangoproject/scss/_dashboard.scss
@@ -11,7 +11,7 @@
     min-width: 240px;
     padding: 0 20px 10px 20px;
     margin: 10px 10px 20px 10px;
-    border: 1px solid $gray-line;
+    border: 1px solid var(--hairline-color);
     border-radius: 4px;
     display: inline-block;
     position: relative;
@@ -23,18 +23,18 @@
         font-weight: 400;
         display: block;
         text-align: left;
-        color: $text;
+        color: var(--body-fg);
         a {
-            color: $text;
+            color: var(--link-color);
 
             &:visited {
-                color: lighten($text, 10%);
+                color: var(--text-l10);
             }
 
             &:active,
             &:focus,
             &:hover {
-                color: lighten($text, 20%);
+                color: var(--text-l20);
             }
         }
     }
@@ -55,19 +55,19 @@
         pointer-events: none;
 
         a {
-            color: $text;
+            color: var(--body-fg);
             text-decoration: none;
             pointer-events: auto;
             z-index: 10;
 
             &:visited {
-                color: lighten($text, 10%);
+                color: var(--text-l10);
             }
 
             &:active,
             &:focus,
             &:hover {
-                color: lighten($text, 20%);
+                color: var(--text-l20);
             }
         }
         .timestamp {
@@ -89,7 +89,7 @@
 
 .graph-wrapper {
     border-radius: 4px;
-    border: 1px solid $gray-line;
+    border: 1px solid var(--hairline-color);
     padding: 20px;
     margin: 20px 0;
 }
